# Megatron-LM-Projection

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md
projection/: pyproject.toml
projection/src/projection/: __init__.py  api.py  configs.py  loader.py
projection/src/projection/core/: __init__.py  activations.py  block.py  deepseek_v4.py  layer.py  model.py  modules.py  optimizer.py  trainer.py
projection/src/projection/gpu_specs/: b200.yaml  gb200.yaml  gb300.yaml  h100.yaml  h200.yaml  mi300x.yaml  mi325x.yaml  mi350x.yaml  mi355x.yaml  mi455x.yaml  rubin.yaml
projection/src/projection/model_configs/: Qwen__Qwen3-235B-A22B.yaml  Qwen__Qwen3-30B-A3B.yaml  custom__DeepSeek-MoE-400B.yaml  deepseek-ai__DeepSeek-V2-Lite.yaml  deepseek-ai__DeepSeek-V2.yaml  deepseek-ai__DeepSeek-V3.yaml  deepseek-ai__DeepSeek-V4-Flash.yaml  deepseek-ai__DeepSeek-V4-Pro.yaml  deepseek_v2_lite.yaml  llama3_1_8b.yaml  meta-llama__Llama-3.1-405B.yaml  meta-llama__Llama-3.1-70B.yaml  meta-llama__Llama-3.1-8B.yaml  mistralai__Mixtral-8x22B-v0.1.yaml  mistralai__Mixtral-8x7B-v0.1.yaml  moonshotai__Kimi-K2-Instruct.yaml  moonshotai__Kimi-K2.6.yaml  openai__gpt-oss-120b.yaml  openai__gpt-oss-20b.yaml  zai-org__GLM-5.yaml
projection/src/projection/parallel/: __init__.py  ranks.py
projection/tests/: test_smoke.py
projection/tests/unit/: test_activations_per_rank.py  test_api.py  test_deepseek_v4.py  test_dense.py  test_fsdp_conflicts.py  test_moe.py  test_moe_folding.py  test_precision_aware.py  test_script_gen.py  test_validation.py
projection/tools/: gen_fixtures.py
(+41 files in other folders)
